@@ -1,3 +1,7 @@
+2012-02-13  Vanessa Gil  <vanessa.gil@artica.es>
+
+	* util/pandora_manage.pl: Changed Event validate given id.
+
 2012-02-13  Junichi Satoh <junichi@rworks.jp>
 
 	* FreeBSD/pandora_server.conf: Changed the plugin_exec to 'gtimeout'.
